--- a/wubweb/src/App.css
+++ b/wubweb/src/App.css
@@ -1,44 +1,20 @@
+:root {
+  --highlight-color: #115011;
+  --main-background-color: #030e03;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 20vmin;
-  pointer-events: none;
-}
-
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-} */
-
-.App-header {
-  background-color: #282c34;
+  background-color: var(--main-background-color);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 10vh;
-  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.search-bar {
-  height: 3em;
-  width: 50em;
+.App-logo {
+  height: 15vmin;
+  pointer-events: none;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-/* @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
